# src/routes/index.js
@@ -1,20 +1,17 @@
-//* RESPONSABILIDAD: armar el router y las rutas y exportalo
-
 const { Router } = require("express")
-const { getWelcomeController, getUsersController, getUserByIdController, createUserController } = require("../controllers/users.controller")
-const { requestLogger, errorHandler } = require("../middlewares")
-const { userCreateValidator } = require("../middlewares/userCreateValidator")
+const authorRoutes = require("./authorRoutes")
+const postRoutes = require("./postRoutes")
 
 const router = Router()
 
+router.get("/", (req, res) => {
+  res.status(200).json({
+    message: "el server esta ok"
+  })
+})
 
-router.get("/", getWelcomeController)
-
-router.get("/users", getUsersController)
-
-router.get("/users/:id", getUserByIdController)
-
-router.post('/users', createUserController)
+router.use("/authors", authorRoutes)
+router.use("/posts", postRoutes)
 
 module.exports = {
   router
